# poddebugger

./: .env.example  AGENT_HARNESS.md  FRAMEWORK.md  IMPROVEMENTS.md  QUICKSTART.md  README.md
agent/: pyproject.toml
agent/poddebugger/: __init__.py  analyzer.py  approvals.py  cli.py  collector.py  config.py  deepinspect.py  dotenv.py  experience.py  models.py  promptopt.py  promptpack.py  prompts.py  remediation.py  scenarios.py
agent/poddebugger/framework/: __init__.py  agent.py  json_utils.py  llm.py  llms.py  prompts.py  state.py  workspace.py
agent/poddebugger/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
agent/poddebugger/providers/: __init__.py  base.py  kubernetes.py  podman.py
agent/poddebugger/scaffold/: __init__.py  engine.py  llms.py  probes.py  (+5 more)
agent/tests/: __init__.py  test_analyzer.py  test_approvals.py  test_approvals_probes.py  test_cli_approvals.py  test_cli_undo.py  test_coder.py  test_deepinspect.py  test_experience.py  test_experience_engine.py  test_framework_boundary.py  test_kubernetes.py  test_podman.py  test_promptopt.py  test_promptpack.py  test_remediation.py  test_remediation_loop.py  test_remediation_shell.py  test_remediation_spec_changes.py  test_remediation_verify.py  test_scaffold_agents.py  test_scaffold_engine.py  test_scaffold_extra_agents.py  test_scaffold_librarian.py  test_scaffold_llms.py  test_scaffold_remediator.py  test_scaffold_search.py  test_scaffold_specialist.py  test_scaffold_state.py  test_scaffold_workspace.py  test_scenarios.py  util.py
examples/log_investigator/: README.md  pyproject.toml
inquiro/: README.md  pyproject.toml
inquiro/inquiro/: __init__.py  agent.py  json_utils.py  llm.py  llms.py  prompts.py  state.py  workspace.py
inquiro/tests/: test_smoke.py
(+57 files in other folders)
